fix main-container overflow / fix nav border color on mobile / fix fontawesome icon

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,7 @@
 /******************************************************************************/
 /********************************* MAIN **************************************/
 #main-container {
-  width: 100%;
+  margin: auto;
 }
 
 /******************************* HEADER **************************************/
@@ -30,13 +30,13 @@ nav a {
   justify-content: center;
 
   border-top: none;
-  border-bottom: 3px solid grey;
+  border-bottom: 3px solid var(--lightGrey);
 }
 
 nav a:hover,
 nav a:active {
   border-top: none;
-  border-bottom: 3px solid #0065fc;
+  border-bottom: 3px solid var(--darkBlue);
 }
 
 /*******************************************************************************/
